fix ScrollBar

--- a/style/Edit.scss
+++ b/style/Edit.scss
@@ -36,7 +36,7 @@
             height: 100%;
         }
     }
-    textarea[type=memo],
+    textarea,
     input[type=number],
     input[type=text],
     input[type=password],
